[gd_scene load_steps=15 format=3 uid="uid://ckuhr1f13g1q"]

[ext_resource type="Script" path="res://unit/Unit.gd" id="1_ppg3l"]
[ext_resource type="Texture2D" uid="uid://c8b1mobskyhll" path="res://assets/MiniWorldSprites/Characters/Workers/FarmerTemplate.png" id="2_sxl4r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f8l1f"]
size = Vector2(6, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ua1ru"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 0, 0.686275)
border_blend = true

[sub_resource type="Animation" id="Animation_ynp8f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FarmerTemplate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_8jsii"]
resource_name = "down_idle"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FarmerTemplate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="Animation_oh6i2"]
resource_name = "down_walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FarmerTemplate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_1apk7"]
resource_name = "left_idle"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FarmerTemplate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [16, 15]
}

[sub_resource type="Animation" id="Animation_r2bia"]
resource_name = "left_walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FarmerTemplate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_dt4q8"]
resource_name = "right_idle"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FarmerTemplate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [11, 10]
}

[sub_resource type="Animation" id="Animation_gppge"]
resource_name = "right_walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FarmerTemplate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_41xrm"]
resource_name = "top_idle"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FarmerTemplate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 5]
}

[sub_resource type="Animation" id="Animation_lcyo4"]
resource_name = "top_walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FarmerTemplate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 6, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8iy8e"]
_data = {
"RESET": SubResource("Animation_ynp8f"),
"down_idle": SubResource("Animation_8jsii"),
"down_walk": SubResource("Animation_oh6i2"),
"left_idle": SubResource("Animation_1apk7"),
"left_walk": SubResource("Animation_r2bia"),
"right_idle": SubResource("Animation_dt4q8"),
"right_walk": SubResource("Animation_gppge"),
"top_idle": SubResource("Animation_41xrm"),
"top_walk": SubResource("Animation_lcyo4")
}

[node name="Unit" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_ppg3l")

[node name="CollisionShape2d" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_f8l1f")

[node name="Box" type="Panel" parent="."]
offset_left = -6.0
offset_top = -7.0
offset_right = 6.0
offset_bottom = 9.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ua1ru")
metadata/_edit_use_anchors_ = true

[node name="FarmerTemplate" type="Sprite2D" parent="."]
position = Vector2(0, 1)
texture = ExtResource("2_sxl4r")
hframes = 5
vframes = 12
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8iy8e")
}

[node name="RaySE" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(4, 4)

[node name="RayNW" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(-4, -4)

[node name="RaySW" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(-4, 4)

[node name="RayW" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(-7, 0)

[node name="RayNE" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(4, -4)

[node name="RayE" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(7, 0)

[connection signal="input_event" from="." to="." method="_on_unit_input_event"]
